Header alignment issue

--- a/pizzalair/static/pizzalair/css/style.css
+++ b/pizzalair/static/pizzalair/css/style.css
@@ -230,9 +230,6 @@ form label{
     .btn-primary:active {
         box-shadow: inset 2px 2px #18BE72;
     }
-.page h1 {
-    margin-left: 100px;
-}
 
 input {
     background-color: #18BE7250;
